--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -21,10 +21,9 @@
 			</div>
 		</div>
 		<% if(!currentUser) { %>
-		<!-- <% console.log(currentUser); %> -->
 			<h1 class="login" data-toggle="modal" data-target="#exampleModal">LOGIN</h1>
 		<% }else{ %>
-			<h1 class="login" data-toggle="modal" data-target="#exampleModal">Hello, <%= currentUser.username %></h1>
+			<h1 class="login"><span><%= currentUser.username %> | <a class="non-link" href="/logout">LOGOUT</a></h1>
 		<% } %>
 		
 		<img class="graphic-2" src="images/graphic-2.png">
@@ -110,19 +109,20 @@
 				</div>
 				<div class="modal-body">
 					<i class="fas fa-user username-icon"></i>
-					<form action="/login" method="POST" enctype="multipart/form-data">
-						<input class="login-input m-2" type="text" placeholder="Username" name="username">
+					<form method="POST" action="/login">
+						<input name="username" class="login-input m-2" type="text" placeholder="Username" required>
 						<br>
 						<i class="fas fa-key password-icon"></i>
-						<input class="login-input m-2" type="password" placeholder="Password" name="password">
+						<input name="password" class="login-input m-2" type="password" placeholder="Password"  required>
 						<br>
-						<button class="btn-login mt-1" type="submit">Login</button>
+						<button class="btn-login mt-1">Login</button>
 					</form>
 				</div>
 			</div>
 		</div>
 	</div>
 </body>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
