--- a/views/results.ejs
+++ b/views/results.ejs
@@ -9,9 +9,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Oswald:300,400" rel="stylesheet">
 </head>
 <body>
-	<div class="container-fluid">
+	<div class="container-fluid p-4">
 		<div class="row">
-			<div class="col-12 d-flex p-3">
+			<div class="col-12 d-flex">
 				<a class="non-link" href="/">
 					<h1 class="display-1 results-title">MACLUBZ</h1>
 				</a>
